| Bug #4400 | incorrect error message about aggregate function in subquery | ||
|---|---|---|---|
| Submitted: | 3 Jul 2004 20:52 | Modified: | 17 Jul 2004 1:42 |
| Reporter: | Oleksandr Byelkin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | Any (all) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[3 Jul 2004 20:52]
Oleksandr Byelkin
[4 Jul 2004 7:48]
Oleksandr Byelkin
ChangeSet 1.1961 04/07/04 08:46:28 bell@sanja.is.com.ua +5 -0 aggregate functions check during substitution made only for single row subselects (BUG#4400) restoring current senect pointer before PS rexecution (backport from 5.0) removed spaces at lines ends
[17 Jul 2004 1:13]
Oleksandr Byelkin
pushed
